Add new recipe files and images
New files have been added as well as new images to represent the
new recipes. The main index file is also updated to include these
new recipes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chapati.html">Chapati Recipe</a>
+    <ul>
+        <li><a href="recipes/chapati.html">Chapati Recipe</a></li>
+        <li><a href="recipes/beefWetFry.html"></a></li>
+        <li><a href="recipes/mandazi.html"></a></li>
+    </ul>
+    
 </body>
 </html>
