--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/chapati.html">Chapati Recipe</a></li>
-        <li><a href="recipes/beefWetFry.html"></a></li>
-        <li><a href="recipes/mandazi.html"></a></li>
+        <li><a href="recipes/beefWetFry.html">Beef Wet Fry Recipe</a></li>
+        <li><a href="recipes/mandazi.html"></a>Mandazi Recipe</li>
     </ul>
     
 </body>
