--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="recipes/chapati.html">Chapati Recipe</a></li>
         <li><a href="recipes/beefWetFry.html">Beef Wet Fry Recipe</a></li>
-        <li><a href="recipes/mandazi.html"></a>Mandazi Recipe</li>
+        <li><a href="recipes/mandazi.html">Mandazi Recipe</a></li>
     </ul>
     
 </body>
