Style the recipe pages
Changing the background color,text formattings as well as image formattings using the css file

--- a/recipes/beefWetFry.html
+++ b/recipes/beefWetFry.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beef Wet Fry Recipe</title>
+    <link rel="stylesheet" href="recipes.css">
 </head>
 <body>
     <h1>Beef Wet Fry</h1>
     <img src="../images/beefWetFry.png">
+    <div>
     <h2>Description</h2>
-    <p> One of the most delicious recipes ever cooked. Meat filled with 
-        all kinds of different flavoured soaked into a wet but non-soupy 
-        exotic flavour. It is well served with ugali, greens or even mukimo. 
+    <p> One of the most delicious recipes ever cooked. <br> filled with 
+        all kinds of different flavoured soaked into<br> a wet but non-soupy 
+        exotic flavour. It is well served with ugali, <br>greens or even mukimo. 
         Whichever accompaniment your taste buds long for.
     </p>
+    </div><br><br><br><br>
     <h1>Ingredients</h1>
     <ul>
         <li>500g beef (chopped into cubes)</li>
