--- a/recipes/mandazi.html
+++ b/recipes/mandazi.html
@@ -7,12 +7,14 @@
     <title> Mandazi Recipe</title>
     <h1>Mandazi Recipe</h1>
 <img src="../images/mandazi.png">
-<h1>Description</h1>
-<p>Whether it's to snack on or an accompaniment for breakfast mandazis are the go for choice.
-    Cooked to be so tender and sweet that will always giving you craving for more after just 
+<link rel="stylesheet" href="recipes.css">
+</head>
+<h2>Description</h2>
+<p>Whether it's to snack on or an accompaniment for breakfast<br> mandazis are the go for choice.
+    Cooked to be so <br>tender and sweet that will always giving you craving for more after just 
     a single bite.
-</p>
-<h2>Ingredients</h2>
+</p><br><br><br><br><br><br>
+<h1>Ingredients</h1>
 <ul>
     <li>3 cups all-purpose flour</li>
     <li>1/2 cup sugar</li>
@@ -24,7 +26,7 @@
     <li>400ml coconut milk</li>
     <li>oil, for frying</li>
 </ul>
-<h2>Steps</h2>
+<h1>Steps</h1>
 <ol>
     <li>In a large bowl, whisk together the flour,
          sugar, baking powder, cardamom, and salt. Make a well in the center, 
@@ -37,7 +39,7 @@
 
 </ol>
 
-</head>
+
 <body>
     
 </body>
