--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <!--<img src="images/homepage-foods.jpg" alt="Image is not available at the moment">-->
+    <div class="recipes">
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/chapati.html">Chapati Recipe</a></li>
         <li><a href="recipes/beefWetFry.html">Beef Wet Fry Recipe</a></li>
         <li><a href="recipes/mandazi.html">Mandazi Recipe</a></li>
     </ul>
-    
+    </div>
 </body>
 </html>
